OrderItemDTO:: new bean added